name:           graph-dsl-graphviz
version:        0.0.0.1
synopsis:       Simple graph definition eDSL
description:    Simple graph definition eDSL.
                The result is Graphviz representation.
homepage:       https://github.com/cblp/graph-dsl-graphviz
license:        GPL-3
license-file:   LICENSE
author:         Yuriy Syrovetskiy
maintainer:     cblp@cblp.su
copyright:      2016 Yuriy Syrovetskiy
category:       Web
build-type:     Simple
cabal-version:  >= 1.10

library
    build-depends:    containers
                    , base
                    , fgl
                    , graphviz
                    , mtl
                    , text
    default-language: Haskell2010
    ghc-options:      -Wall -Werror
    exposed-modules:  Data.Graph.Builder.GraphViz
                      Data.GraphViz.Helpers
    hs-source-dirs:   src
